<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sleep"
        android:textColor="@color/color_blue_gray_900"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv">

        <RadioButton
            android:id="@+id/radio_off"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/off" />

        <RadioButton
            android:id="@+id/radio_30"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/_30" />

        <RadioButton
            android:id="@+id/radio_60"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/_60" />

        <RadioButton
            android:id="@+id/radio_90"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/_90" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/relative_custom_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/custom"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_timer">

        <EditText
            android:id="@+id/text_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/custom"
            android:inputType="number"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="?attr/selectableItemBackground"
        android:text="@string/action_confirm"
        android:textColor="@color/color_gray_600"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/relative_custom_time"
        app:layout_constraintStart_toEndOf="@+id/relative_custom_time"
        app:layout_constraintTop_toTopOf="@+id/relative_custom_time" />

</android.support.constraint.ConstraintLayout>
